syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package kascfg;

option go_package = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/kascfg";

import "google/protobuf/duration.proto";

// CF suffix stands for Configuration File, meaning a message is part of ConfigurationFile.

message ListenCF {
    // Network type to listen on. Supported values: tcp, tcp4, tcp6, unix
    string network = 1 [json_name = "network"];
    // Address to listen on.
    string address = 2 [json_name = "address"];
    // Enable "gRPC through WebSocket" listening mode. Rather than expecting gRPC directly, expect a WebSocket
    // connection, from which a gRPC stream is then unpacked.
    bool websocket = 3 [json_name = "websocket"];
}

message GitLabCF {
    string address = 1 [json_name = "address"];
    string authentication_secret_file = 2 [json_name = "authentication_secret_file"];
}

message AgentCF {
    // Configuration for agent's configuration repository.
    AgentConfigurationCF configuration = 1 [json_name = "configuration"];
}

message AgentConfigurationCF {
    // How often to poll agent's configuration repository for changes.
    google.protobuf.Duration poll_period = 1 [json_name = "poll_period"];
}

// ConfigurationFile represents kas configuration file.
message ConfigurationFile {
    ListenCF listen = 1 [json_name = "listen"];
    GitLabCF gitlab = 2 [json_name = "gitlab"];
    AgentCF agent = 3 [json_name = "agent"];
}
